@@ -3527,7 +3527,9 @@ This word is used in the idioms {bo'Dagh'a' lo':sen} and {bo'DaghHom lo':sen}.</
       <column name="antonyms"></column>
       <column name="see_also"></column>
       <column name="notes"></column>
-      <column name="hidden_notes">The Klingon Dictionary was published by Pocket Books. See also {paq:n:1h}.</column>
+      <column name="hidden_notes">The Klingon Dictionary was published by Pocket Books. See also {paq:n:1h}.
+
+The 2009 {Star Trek:src} movie has a deleted scene with the line: {buqmeylIjDaq DIvI' De' pu'jInmey... 'ach pu'jInmeylIj bIHbe'.:sen:nolink}</column>
       <column name="components"></column>
       <column name="examples">
 ▶ {QongDaq buq:n}
