@@ -713,7 +713,7 @@ Do not confuse this with a society in the cultural sense, for which see {nugh:n}
       <column name="definition_de">Territorium, Grundbesitz</column>
       <column name="synonyms"></column>
       <column name="antonyms"></column>
-      <column name="see_also">{DoQ:v}, {yer ghajwI' chaw':n}</column>
+      <column name="see_also">{DoQ:v}, {yer ghajwI' chaw':n}, {teblaw':n}, {Daq'a':n}</column>
       <column name="notes">This word is used in {Klingon Monopoly:src} to denote a game square, including those corresponding to the four ship classes.</column>
       <column name="hidden_notes"></column>
       <column name="components"></column>
